# mcp-video_EDL_AAF

./: .checkyourself.yml  .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  llms.txt  pyproject.toml  server.json  test-vps-migration.txt
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  pr-safety.yml  publish.yml
.pi-lens/: turn-state.json
.pi-lens/cache/: knip.meta.json  python-rules-v2.json  session-start-guidance.meta.json  todo-baseline.meta.json  turn-end-findings-last.json  turn-end-findings-last.meta.json  turn-end-findings.meta.json
.pi/continue/: MDE5ZTVkN2UtNGYwMS03YmExLTllZWEtZWNhNTkxMmNmMDFh.md
docs/: AI_AGENT_DISCOVERY.md  CLI_REFERENCE.md  MCP-VIDEO-FEATURES-ROADMAP.md  PYTHON_CLIENT.md  RELEASE_HARDENING_HANDOFF_2026-05-09.md  TESTING.md  TOOLS.md  faq.md  launch-checklist.md
docs/adr/: 0006-basic-pitch-python-313-and-extra-conflicts.md
mcp_video/: __init__.py  analytics.py  defaults.py  design_guardrails.py  doctor.py  engine.py  engine_aescript.py  engine_audio_ops.py  engine_audio_waveform.py  engine_compare_quality.py  engine_detect_scenes.py  engine_edl.py  engine_frames.py  engine_glitch.py  engine_glitch_shader.py  engine_hls.py  engine_images.py  engine_merge.py  engine_overlay.py  engine_probe.py  engine_resize.py  engine_runtime_utils.py  engine_split_screen.py  engine_stabilize.py  engine_subtitle_generate.py  engine_subtitles.py  engine_text.py  engine_timeline.py  engine_watermark.py  errors.py  ffmpeg_helpers.py  filter_guardrails.py  font_manager.py  hyperframes_engine.py  merge_guardrails.py  models.py  quality_guardrails.py  server.py  server_app.py  server_tools_advanced.py  (+7 more)
mcp_video/_crush_shader/: package.json
mcp_video/ai_engine/: __init__.py  color.py  download.py  scene.py  silence.py  spatial.py  stem.py  transcribe.py  upscale.py
mcp_video/audio_engine/: __init__.py  _legacy_core.py  core.py  sequencing.py
mcp_video/audio_engine/integrations/: basic_pitch_bridge.py
mcp_video/cli/: formatting.py  handlers_hyperframes.py
mcp_video/cli/parser/: hyperframes.py  quality.py
mcp_video/client/: base.py  contracts.py  hyperframes.py  media.py
mcp_video/design_quality/guardrails/: analysis.py  checks.py  core.py  fixes.py  probe.py  scoring.py
mcp_video/effects_engine/: text.py  utility.py
mcp_video/music_generation/: minimax.py
skills/mcp-video/: SKILL.md
skills/mcp-video/agents/: openai.yaml
tests/: conftest.py  test_ai_features.py  test_architecture_guardrails.py  test_audio_sequencing.py  test_basic_pitch_bridge.py  test_cli_formatting.py  test_cli_parsers.py  test_client.py  test_design_guardrails.py  test_doctor.py  test_engine.py  test_engine_advanced.py  test_engine_filters.py  test_engine_glitch.py  test_ffmpeg_helpers.py  test_ffmpeg_runner_contract.py  test_hyperframes_engine.py  test_launch_remediation.py  test_layout_guardrails.py  test_merge_guardrails.py  test_motion_guardrails.py  test_pathsafety_convergence.py  test_perf_regression.py  test_public_surface.py  test_quality_guardrails.py  test_real_media.py  test_safe_tool_envelope.py  test_server.py  test_server_tools_glitch.py  test_server_tools_glitch_shader.py  test_server_tools_media.py  test_tier1_regressions.py  test_tier4_features.py  test_transitions.py
workflows/benchmarks/: run_adversarial_certification.py  run_confidence_benchmark.py
